Friday July 4, 2009 : msx264-1.2.0
	- modified to compile against new multisliced version of x264 to allow packetization-mode=0

Wednesday August 20, 2008: msx264-1.1.0
	- compiled together with x264-snapshot-20080421-2245+multislicing-patch.tar.gz, allows packetization-mode=0